# gphpedit

./: .anjuta_sym_db.db  .gitignore  AUTHORS  AUTHORS.orig  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.transifex  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  gphpedit.applications  gphpedit.desktop.in  gphpedit.spec  gphpedit.spec.in  index.html  intltool-merge.in  intltool-update.in
.anjuta/session/: anjuta.session  dock-layout.xml
data/: Makefile.am  Makefile.in  c.api  css.api  org.gphpedit.gschema.xml  org.gphpedit.gschema.xml.in  org.gphpedit.gschema.xml.in.in  perl.api  python.api
debian/: changelog  control  copyright  gphpedit.1  gphpedit.install  gphpedit.manpages  gphpedit.xpm  menu  rules  watch
doc/: Makefile.am  Makefile.in
pixmaps/: Makefile.am  Makefile.in  pixmaps.license
plugins/: Makefile.am  phplint.pl
po/: LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  de.po  en.po  es.po  fi.po  gphpedit.pot  hu.po  it.po  ja.po  missing
src/: Makefile  Makefile.am  Makefile.in  calltip.c  calltip.h  classbrowser.c  classbrowser.h  classbrowser.ui  classbrowser_backend.c  classbrowser_backend.h  classbrowser_parse.c  classbrowser_parse.h  classbrowser_ui.c  classbrowser_ui.h  config.h.in  debug.c  debug.h  document.c  document.h  document_loader.c  document_loader.h  document_manager.c  document_manager.h  document_saver.c  document_saver.h  document_scintilla.c  document_scintilla.h  document_types.c  document_types.h  document_webkit.c  document_webkit.h  documentable.c  documentable.h  edit_template.c  edit_template.h  filebrowser.ui  filebrowser_backend.c  filebrowser_backend.h  filebrowser_ui.c  filebrowser_ui.h  (+149 more)
src/gtkscintilla2/: AUTHORS  GtkScintilla-2.0.pc  GtkScintilla-2.6.pc  Makefile  README  gtkscintilla.c  gtkscintilla.c.in  gtkscintilla.h  gtkscintilla.h.in  libgtkscintilla2.so.0.1.0  marshal.c  marshal.h  marshal.list  scigen.py
src/gtkscintilla2/scintilla/doc/: ScintillaDoc.html  ScintillaDownload.html  ScintillaHistory.html  index.html
src/gtkscintilla2/scintilla/doc/CVS/: Entries
src/gtkscintilla2/scintilla/gtk/: Converter.h  PlatGTK.cxx  ScintillaGTK.cxx  makefile
src/gtkscintilla2/scintilla/gtk/CVS/: Entries
src/gtkscintilla2/scintilla/include/: Platform.h  ScintillaWidget.h  WindowAccessor.h
src/gtkscintilla2/scintilla/include/CVS/: Entries
src/gtkscintilla2/scintilla/lexers/: LexCOBOL.cxx
src/gtkscintilla2/scintilla/src/: Document.h  DocumentAccessor.h  Editor.cxx  ExternalLexer.h  LexCOBOL.cxx  LexCPP.cxx  LexHTML.cxx  LexPerl.cxx  LexVB.cxx  Style.h  StyleContext.h
src/gtkscintilla2/scintilla/src/CVS/: Entries
src/gtkscintilla2/scintilla/test/CVS/: Entries
src/gtkscintilla2/scintilla/win32/: ScintRes.rc  ScintillaWin.cxx
themes/: Makefile.am  mixer.xml
